Resolve checkstyle findings