@@ -30,20 +30,31 @@ import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.function.Function;
 
 import static com.fasterxml.jackson.core.util.DefaultIndenter.SYSTEM_LINEFEED_INSTANCE;
 import static io.cucumber.query.Jackson.OBJECT_MAPPER;
-import static io.cucumber.query.Repository.RepositoryFeature.*;
+import static io.cucumber.query.Repository.RepositoryFeature.INCLUDE_ATTACHMENTS;
+import static io.cucumber.query.Repository.RepositoryFeature.INCLUDE_GHERKIN_DOCUMENTS;
+import static io.cucumber.query.Repository.RepositoryFeature.INCLUDE_HOOKS;
+import static io.cucumber.query.Repository.RepositoryFeature.INCLUDE_STEP_DEFINITIONS;
+import static io.cucumber.query.Repository.RepositoryFeature.INCLUDE_SUGGESTIONS;
+import static io.cucumber.query.Repository.RepositoryFeature.INCLUDE_UNDEFINED_PARAMETER_TYPES;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Arrays.asList;
 import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
-public class QueryAcceptanceTest {
-    private static final NdjsonToMessageIterable.Deserializer deserializer = (json) -> OBJECT_MAPPER.readValue(json, Envelope.class);
+class QueryAcceptanceTest {
+    private static final NdjsonToMessageIterable.Deserializer deserializer = json -> OBJECT_MAPPER.readValue(json, Envelope.class);
 
     static List<QueryTestCase> acceptance() {
         List<QueryTestCase> testCases = new ArrayList<>();
@@ -76,8 +87,8 @@ public class QueryAcceptanceTest {
     @MethodSource("acceptance")
     void test(QueryTestCase testCase) throws IOException {
         ByteArrayOutputStream bytes = writeQueryResults(testCase, new ByteArrayOutputStream());
-        String expected = new String(Files.readAllBytes(testCase.expected), UTF_8);
-        String actual = new String(bytes.toByteArray(), UTF_8);
+        String expected = Files.readString(testCase.expected);
+        String actual = bytes.toString(UTF_8);
         assertThat(actual).isEqualTo(expected);
     }
 
@@ -124,25 +135,25 @@ public class QueryAcceptanceTest {
 
         queries.put("countMostSevereTestStepResultStatus", Query::countMostSevereTestStepResultStatus);
         queries.put("countTestCasesStarted", Query::countTestCasesStarted);
-        queries.put("findAllPickles", (query) -> query.findAllPickles().size());
-        queries.put("findAllPickleSteps", (query) -> query.findAllPickleSteps().size());
-        queries.put("findAllStepDefinitions", (query) -> query.findAllStepDefinitions().size());
-        queries.put("findAllTestCaseStarted", (query) -> query.findAllTestCaseStarted().size());
-        queries.put("findAllTestCaseFinished", (query) -> query.findAllTestCaseFinished().size());
-        queries.put("findAllTestRunHookStarted", (query) -> query.findAllTestRunHookStarted().size());
-        queries.put("findAllTestRunHookFinished", (query) -> query.findAllTestRunHookFinished().size());
-        queries.put("findAllTestSteps", (query) -> query.findAllTestSteps().size());
-        queries.put("findAllTestStepsStarted", (query) -> query.findAllTestStepStarted().size());
-        queries.put("findAllTestStepsFinished", (query) -> query.findAllTestStepFinished().size());
-        queries.put("findAllTestCases", (query) -> query.findAllTestCases().size());
-        queries.put("findAllUndefinedParameterTypes", (query) -> query.findAllUndefinedParameterTypes().stream()
+        queries.put("findAllPickles", query -> query.findAllPickles().size());
+        queries.put("findAllPickleSteps", query -> query.findAllPickleSteps().size());
+        queries.put("findAllStepDefinitions", query -> query.findAllStepDefinitions().size());
+        queries.put("findAllTestCaseStarted", query -> query.findAllTestCaseStarted().size());
+        queries.put("findAllTestCaseFinished", query -> query.findAllTestCaseFinished().size());
+        queries.put("findAllTestRunHookStarted", query -> query.findAllTestRunHookStarted().size());
+        queries.put("findAllTestRunHookFinished", query -> query.findAllTestRunHookFinished().size());
+        queries.put("findAllTestSteps", query -> query.findAllTestSteps().size());
+        queries.put("findAllTestStepsStarted", query -> query.findAllTestStepStarted().size());
+        queries.put("findAllTestStepsFinished", query -> query.findAllTestStepFinished().size());
+        queries.put("findAllTestCases", query -> query.findAllTestCases().size());
+        queries.put("findAllUndefinedParameterTypes", query -> query.findAllUndefinedParameterTypes().stream()
                 .map(undefinedParameterType -> Arrays.asList(
                         undefinedParameterType.getName(),
                         undefinedParameterType.getExpression()
                 ))
                 .collect(toList()));
 
-        queries.put("findAttachmentsBy", (query) -> {
+        queries.put("findAttachmentsBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             results.put("testStepFinished", query.findAllTestCaseStarted().stream()
                     .map(query::findTestStepFinishedAndTestStepBy)
@@ -169,7 +180,7 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findHookBy", (query) -> {
+        queries.put("findHookBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             results.put("testStep", query.findAllTestSteps().stream()
                     .map(query::findHookBy)
@@ -189,7 +200,7 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findLineageBy", (query) -> {
+        queries.put("findLineageBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             NamingStrategy namingStrategy = NamingStrategy.strategy(NamingStrategy.Strategy.LONG).build();
             results.put("testCaseStarted", query.findAllTestCaseStarted().stream()
@@ -213,13 +224,13 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findLocationOf", (query) -> query.findAllPickles().stream()
+        queries.put("findLocationOf", query -> query.findAllPickles().stream()
                 .map(query::findLocationOf)
                 .filter(Optional::isPresent)
                 .collect(toList()));
-        queries.put("findMeta", (query) -> query.findMeta().map(meta -> meta.getImplementation().getName()));
+        queries.put("findMeta", query -> query.findMeta().map(meta -> meta.getImplementation().getName()));
 
-        queries.put("findMostSevereTestStepResultBy", (query) -> {
+        queries.put("findMostSevereTestStepResultBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             results.put("testCaseStarted", query.findAllTestCaseStarted().stream()
                     .map(query::findMostSevereTestStepResultBy)
@@ -236,7 +247,7 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findPickleBy", (query) -> {
+        queries.put("findPickleBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             results.put("testCaseStarted", query.findAllTestCaseStarted().stream()
                     .map(query::findPickleBy)
@@ -257,22 +268,22 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findPickleStepBy", (query) -> query.findAllTestSteps().stream()
+        queries.put("findPickleStepBy", query -> query.findAllTestSteps().stream()
                 .map(query::findPickleStepBy)
                 .map(pickleStep -> pickleStep.map(PickleStep::getText))
                 .filter(Optional::isPresent)
                 .collect(toList()));
-        queries.put("findStepBy", (query) -> query.findAllPickleSteps().stream()
+        queries.put("findStepBy", query -> query.findAllPickleSteps().stream()
                 .map(query::findStepBy)
                 .map(step -> step.map(Step::getText))
                 .collect(toList()));
-        queries.put("findStepDefinitionsBy", (query) -> query.findAllTestSteps().stream()
+        queries.put("findStepDefinitionsBy", query -> query.findAllTestSteps().stream()
                 .map(query::findStepDefinitionsBy)
                 .map(stepDefinitions -> stepDefinitions.stream().map(StepDefinition::getId)
                         .collect(toList()))
                 .collect(toList()));
 
-        queries.put("findSuggestionsBy", (query) -> {
+        queries.put("findSuggestionsBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             results.put("pickleStep", query.findAllPickleSteps().stream()
                     .map(query::findSuggestionsBy)
@@ -287,13 +298,13 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findUnambiguousStepDefinitionBy", (query) -> query.findAllTestSteps().stream()
+        queries.put("findUnambiguousStepDefinitionBy", query -> query.findAllTestSteps().stream()
                 .map(query::findUnambiguousStepDefinitionBy)
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .map(StepDefinition::getId));
 
-        queries.put("findTestCaseStartedBy", (query) -> {
+        queries.put("findTestCaseStartedBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             results.put("testCaseFinished", query.findAllTestCaseFinished().stream()
                     .map(query::findTestCaseStartedBy)
@@ -310,7 +321,7 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findTestCaseBy", (query) -> {
+        queries.put("findTestCaseBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             results.put("testCaseStarted", query.findAllTestCaseStarted().stream()
                     .map(query::findTestCaseBy)
@@ -331,7 +342,7 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findTestCaseDurationBy", (query) -> {
+        queries.put("findTestCaseDurationBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
             results.put("testCaseStarted", query.findAllTestCaseStarted().stream()
                     .map(query::findTestCaseDurationBy)
@@ -344,22 +355,22 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findTestCaseFinishedBy", (query) -> query.findAllTestCaseStarted().stream()
+        queries.put("findTestCaseFinishedBy", query -> query.findAllTestCaseStarted().stream()
                 .map(query::findTestCaseFinishedBy)
                 .map(testCaseFinished -> testCaseFinished.map(TestCaseFinished::getTestCaseStartedId))
                 .collect(toList()));
-        queries.put("findTestRunDuration", (query) -> query.findTestRunDuration()
+        queries.put("findTestRunDuration", query -> query.findTestRunDuration()
                 .map(Convertor::toMessage));
         queries.put("findTestRunFinished", Query::findTestRunFinished);
         queries.put("findTestRunStarted", Query::findTestRunStarted);
-        queries.put("findTestStepBy", (query) -> query.findAllTestCaseStarted().stream()
+        queries.put("findTestStepBy", query -> query.findAllTestCaseStarted().stream()
                 .map(query::findTestStepsStartedBy)
                 .flatMap(Collection::stream)
                 .map(query::findTestStepBy)
                 .map(testStep -> testStep.map(TestStep::getId))
                 .collect(toList()));
 
-        queries.put("findTestStepsStartedBy", (query) -> {
+        queries.put("findTestStepsStartedBy", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
 
             results.put("testCaseStarted", query.findAllTestCaseStarted().stream()
@@ -375,16 +386,16 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findTestRunHookFinishedBy", (query) -> query.findAllTestRunHookStarted().stream()
+        queries.put("findTestRunHookFinishedBy", query -> query.findAllTestRunHookStarted().stream()
                 .map(query::findTestRunHookFinishedBy)
                 .map(testRunHookFinished -> testRunHookFinished.map(TestRunHookFinished::getTestRunHookStartedId))
                 .collect(toList()));
-        queries.put("findTestRunHookStartedBy", (query) -> query.findAllTestRunHookFinished().stream()
+        queries.put("findTestRunHookStartedBy", query -> query.findAllTestRunHookFinished().stream()
                 .map(query::findTestRunHookStartedBy)
                 .map(testRunHookStarted -> testRunHookStarted.map(TestRunHookStarted::getId))
                 .collect(toList()));
 
-        queries.put("findTestStepByTestStepFinished", (query) -> {
+        queries.put("findTestStepByTestStepFinished", query -> {
             Map<String, Object> results = new LinkedHashMap<>();
 
             results.put("testCaseStarted", query.findAllTestCaseStarted().stream()
@@ -403,11 +414,11 @@ public class QueryAcceptanceTest {
             return results;
         });
 
-        queries.put("findTestStepsFinishedBy", (query) -> query.findAllTestCaseStarted().stream()
+        queries.put("findTestStepsFinishedBy", query -> query.findAllTestCaseStarted().stream()
                 .map(query::findTestStepsFinishedBy)
                 .map(testStepFinisheds -> testStepFinisheds.stream().map(TestStepFinished::getTestStepId).collect(toList()))
                 .collect(toList()));
-        queries.put("findTestStepFinishedAndTestStepBy", (query) -> query.findAllTestCaseStarted().stream()
+        queries.put("findTestStepFinishedAndTestStepBy", query -> query.findAllTestCaseStarted().stream()
                 .map(query::findTestStepFinishedAndTestStepBy)
                 .flatMap(Collection::stream)
                 .map(entry -> asList(entry.getKey().getTestStepId(), entry.getValue().getId()))
